fixed alignment

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -22,14 +22,14 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 10%;
 }
 
 .logo {
-  flex: 30%;
+  /* flex: 30%; */
   justify-content: left;
   align-items: center;
   display: flex;
-  margin-left: 10%;
 }
 
 .logo img {
@@ -38,17 +38,15 @@ body {
 
 .menu {
   background-color: white;
-  flex: 70%;
+  /* flex: 70%; */
   display: flex;
   justify-content: space-between;
-  margin: 0 10%;
 }
 
 .item {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-right: 5vh;
   width: 15vh;
   height: 7vh;
   transition: all 0.3s ease;
@@ -84,6 +82,7 @@ body {
 
 .button:hover {
   background-color: darkred;
+  cursor: pointer;
 }
 
 .menu-btn i {
@@ -103,7 +102,7 @@ input[type="checkbox"] {
 
 @media only screen and (max-width: 768px) {
   .navbar {
-    padding: 0 50px;
+    padding: 0 10%;
   }
 
   .logo {
@@ -264,7 +263,7 @@ input[type="checkbox"] {
 /* ******************************************* */
 .first-container {
   margin: 0;
-  padding: 0 10%;
+  padding: 10%;
 }
 
 .hadith {
@@ -273,7 +272,7 @@ input[type="checkbox"] {
   justify-content: center;
   align-content: center;
   flex-direction: column;
-  margin: 10% auto;
+  margin-bottom: 10%;
 }
 
 .hadith h1 {
@@ -283,7 +282,6 @@ input[type="checkbox"] {
 }
 
 .hadith h3 {
-  margin: 1% 0;
   line-height: 1.5;
 }
 
@@ -295,8 +293,13 @@ input[type="checkbox"] {
 @media only screen and (max-width: 768px) {
   .hadith {
     margin-top: 10vh;
-    padding: 50px;
   }
+}
+
+.heading h5 {
+  color: #c6414c;
+  font-size: 16px;
+  font-family: "Lato", sans-serif;
 }
 
 .heading h5 {
@@ -319,7 +322,7 @@ input[type="checkbox"] {
 }
 
 .about-content {
-  margin: 40px 0;
+  margin-top: 5%;
   width: 100%;
   display: flex;
 }
@@ -328,13 +331,17 @@ input[type="checkbox"] {
   width: 50%;
   color: gray;
   line-height: 1.5;
+  padding-right: 5%;
 }
+
 .about-img {
   text-align: right;
   width: 50%;
 }
 
 .about-img img {
+  height: 100%;
+  width: 100%;
   border-radius: 5px;
 }
 
@@ -345,12 +352,12 @@ input[type="checkbox"] {
 
   .about-txt {
     width: 100%;
-    margin: 25px auto;
+    padding: 0;
+    margin: 5% auto;
   }
 
   .about-img {
     width: 100%;
-    margin: 25px auto;
   }
   .about-img img {
     width: 100%;
@@ -377,20 +384,20 @@ input[type="checkbox"] {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  padding: 10%;
+  padding: 5% 10% 10% 10%;
 }
 
 .action {
   background-color: white;
   width: 32%;
-  height: 300px;
+  padding: 2.5%;
   display: flex;
   text-align: center;
   justify-content: center;
   align-content: center;
   flex-direction: column;
   border-radius: 5px;
-  transition: 0.5s;
+  transition: ease-out 0.5s;
 }
 
 .action:hover {
@@ -398,17 +405,17 @@ input[type="checkbox"] {
 }
 
 .action-img img {
-  height: 100px;
-  width: 100px;
+  height: 10vh;
+  width: 10vh;
 }
 
 .action-txt {
-  margin-top: 10px;
+  margin-top: 5%;
 }
 
 .action-txt p {
-  margin: 10px 0;
-  padding: 0 20px;
+  margin: 5% 0;
+  /* padding: 0 20px; */
   color: gray;
   line-height: 1.5;
 }
@@ -424,12 +431,7 @@ input[type="checkbox"] {
   color: darkred;
 }
 
-@media only screen and (max-width: 768px) {
-  .hadith {
-    margin-top: 10vh;
-    padding: 50px 25px;
-  }
-
+@media only screen and (max-width: 1350px) {
   .row-action {
     flex-direction: column;
     text-align: center;
@@ -439,8 +441,8 @@ input[type="checkbox"] {
 
   .action {
     width: 100%;
-    height: 300px;
-    margin: 25px auto;
+    margin: 5% auto;
+    padding: 5%;
   }
 }
 
@@ -458,15 +460,16 @@ input[type="checkbox"] {
 .achievements {
   margin: 0 auto 5% auto;
   text-align: center;
-  width: 50%;
 }
 .achievements h5 {
   color: #c6414c;
-  margin-bottom: 10px;
+}
+
+.achievements h1 {
+  margin: 1% 0;
 }
 
 .achievements p {
-  margin-top: 10px;
   line-height: 1.5;
 }
 
@@ -512,7 +515,7 @@ input[type="checkbox"] {
 
 @media only screen and (max-width: 768px) {
   .achievements {
-    margin: 10% auto;
+    margin: 0 auto 10% auto;
     text-align: center;
     width: 100%;
   }
@@ -523,8 +526,8 @@ input[type="checkbox"] {
 
   .counters > div:nth-of-type(1),
   .counters > div:nth-of-type(2) {
-    border-bottom: 1px solid white;
-    padding-bottom: 20px;
+    border-bottom: 2px solid white;
+    padding-bottom: 10%;
   }
 }
 
